<resources>
    <string name="app_name">CMPUT301W23T31Project</string>
    <string name="title_activity_explore_screen">ExploreScreenActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="create_a_username_for_your_account">Create a username for your account</string>
    <string name="enter_your_player_name_for_other_users_to_see">Enter your player name for other users to see</string>
    <string name="enter_a_url_for_your_profile_picture_e_g_image_png">Enter a url for your profile picture (e.g. image.png)</string>
    <string name="player_name">Player Name</string>
    <string name="image_url">Image URL</string>
    <string name="enter_app">Enter App</string>
    <string name="upload_image">Upload Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_profile_button">View Profile</string>
    <string name="code_info_button_text">Code\ninfo</string>
    <string name="code_info_button_text_one_line">Code info</string>
    <string name="stat_count">| Count</string>
    <string name="stat_high">| High</string>
    <string name="stat_total">| Total</string>
    <string name="take_photo">Take Photo</string>
</resources>